QjackCtl - JACK Audio Connection Kit Qt GUI Interface 
-----------------------------------------------------

ChangeLog


GIT HEAD

- Session: introducing new session save name/dir dialog (WIP)

- Connections: connector line colors are now uniquely mapped
  on a (readable/output) client name basis. (EXPERIMENTAL)


1.0.1  2024-08-01  A Summer'24 Release.

- Graph: thumb-view repositions and resizes immediately when
  visible.

- Graph: Implement patchbay node search functionality: adds a
  floating text-entry field, which appears when typing in the
  canvas, selecting nodes that contains the typed text (maybe
  regular expression).

- Graph: fixed a potential use-after-free issue on canvas nodes
  refresh and recycle.


1.0.0  2024-06-19  An Unthinkable Release.

- Making up the unthinkable (aka. v1.0.0)

- Cancel button option added to close to system-tray icon message.

- Graph: Introducing thumbview context-menu.


0.9.91  2024-05-01  A Spring'24 Release Candidate 2.

- Prepping the unthinkable (aka. v1.0.0-rc2)

- Graph: Introducing the View/Thumbview option as a whole graph
  thumbnail overview helper.

- Updated to latest framework level (Qt >= 6.7)


0.9.90  2024-04-10  A Spring'24 Release Candidate.

- Prepping the unthinkable (aka. v1.0.0-rc1)

- Custom color themes are now file based (*.conf); legacy still
  preserved ntl.

- Old generic "Portuguese" translation (pt) has been corrected to  
  the more proper "Portuguese (Brazil)" locale (pt_BR).

- Simplified and shortened the main window title.


0.9.13  2024-01-24  A Winter'24 Release.

- Graph: Make the main canvas background to mid-gray, when on
  non-dark color themes.

- Turkish (tr) translation added.

- Updated copyright headers into the New Year (2024).


0.9.12  2023-09-09  An End-of-Summer'23 Release.

- Setup: disable Settings parameters altogether, except frames/period
  (aka. buffer-size) if running in the so called 'Active' pure-client
  mode (eg. under PipeWire's pw-jack substitution).
