@@ -6,10 +6,13 @@ ChangeLog
 
 GIT HEAD
 
-- Session: introducing new session save name/dir dialog (WIP)
+- Graph: when visible the thumb-view may now be drag-moved over
+  to a different corner position anytime. (EXPERIMENTAL)
+
+- Session: introducing new Save session name/directory dialog.
 
 - Connections: connector line colors are now uniquely mapped
-  on a (readable/output) client name basis. (EXPERIMENTAL)
+  on a (readable/output) client name basis.
 
 
 1.0.1  2024-08-01  A Summer'24 Release.
